--- a/server/templates/feeds.html
+++ b/server/templates/feeds.html
@@ -29,6 +29,7 @@
         <div class="form-group">
             <label for="fetch_interval">Update Interval (minutes):</label>
             <input type="number" id="fetch_interval" name="fetch_interval" value="30" min="5" max="1440">
+            <small class="text-muted">How often this specific feed should be checked (default: 30 minutes)</small>
         </div>
         <div class="form-actions">
             <button type="submit" class="btn-primary">Add Feed</button>
