--- a/server/templates/article-content.html
+++ b/server/templates/article-content.html
@@ -1,11 +1,11 @@
-{{if .ExtractedContent}}
+{{if .GetExtractedContent}}
 <div class="extracted-content">
     <h4>{{.Title}}</h4>
     <div class="content-text">
-        {{if .ExtractedRichContent}}
-            {{.ExtractedRichContent | safeHTML}}
+        {{if .GetExtractedRichContent}}
+            {{.GetExtractedRichContent | safeHTML}}
         {{else}}
-            {{.ExtractedContent}}
+            {{.GetExtractedContent}}
         {{end}}
     </div>
     <button hx-get="/api/v1/articles/{{.ID}}/hide"
@@ -13,9 +13,9 @@
             hx-swap="innerHTML"
             class="close-btn">Close</button>
 </div>
-{{else if .ExtractionError}}
+{{else if .GetExtractionError}}
 <div class="extraction-error">
-    <p>Failed to extract content: {{.ExtractionError}}</p>
+    <p>Failed to extract content: {{.GetExtractionError}}</p>
 </div>
 {{else}}
 <div class="no-content">
